# f5xc-api-enriched

./: .coverage  .etag  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  XCSH_ISSUE_128.md  categorization_report.txt  pyproject.toml  requirements.txt  test_branding.py  tmp.txt
.github/workflows/: deploy-docs.yml  sync-and-enrich.yml  validate-specs.yml
.serena/: project.yml
claudedocs/: domain_consolidation_completion_report.md  domain_deprecation_guide.md  issue_106_resource_imbalance_analysis.md  issue_107_cross_domain_resources_analysis.md  issue_117_phase1_completion.md
config/: acronyms.yaml  branding.yaml  cli_metadata.yaml  critical_resources.yaml  curl_validation.yaml  default_minimum_configs.yaml  discovery.yaml  discovery_enrichment.yaml  domain_descriptions.yaml  domain_patterns.yaml  downstream_repos.yaml  enrichment.yaml  external_docs.yaml  field_descriptions.yaml  field_metadata.yaml  minimum_configs.yaml  monitoring.yaml  namespace_scope.yaml  normalization.yaml  operation_metadata.yaml  paths.yaml  readonly_fields.yaml  resource_metadata.yaml  server_variables.yaml  spectral.yaml  validation.yaml  validation_rules.yaml
docs/: CLI_REBRANDING.md  DEVELOPMENT.md  index.html
docs/scalar/: index.html
docs/swagger-ui/: index.html
release/: README.md
reports/: enrichment-report.json  lint-report.json  normalization-report.json
scripts/: __init__.py  analyze_constraints.py  discover.py  download.py  enrich.py  ensure_labels.py  generate_descriptions.py  lint.py  merge_specs.py  monitor_workflow.py  normalize.py  pipeline.py  update_categorization.py  validate.py  validate_curl_examples.py  validate_domain_categorization.py
scripts/discovery/: __init__.py  cli_explorer.py  diff_analyzer.py  rate_limiter.py  report_generator.py  schema_inferrer.py
scripts/hooks/: pre-commit-pipeline.sh
scripts/utils/: __init__.py  acronyms.py  alias_validator.py  branding.py  cli_metadata_enricher.py  consistency_validator.py  constraint_analyzer.py  constraint_reconciler.py  curl_validator.py  deprecated_tier_enricher.py  description_enricher.py  description_structure.py  description_validator.py  discovery_enricher.py  domain_categorizer.py  domain_metadata.py  external_docs_enricher.py  field_description_enricher.py  field_metadata_enricher.py  grammar.py  lint_reporter.py  minimum_configuration_enricher.py  namespace_scope_enricher.py  operation_metadata_enricher.py  path_config.py  readonly_enricher.py  report_base.py  schema_fixer.py  server_variables.py  server_variables_markdown.py  tag_generator.py  validation_enricher.py  validation_reporter.py
specs/discovered/: session.json
specs/enriched/: ai_intelligence.json  api_security.json  applications.json  bigip.json  billing.json  cdn.json  config.json  docs-cloud-f5-com.0000.public.ves.io.schema.ai_assistant.ves-swagger.json  docs-cloud-f5-com.0001.public.ves.io.schema.api_sec.api_crawler.ves-swagger.json  docs-cloud-f5-com.0002.public.ves.io.schema.views.api_definition.ves-swagger.json  docs-cloud-f5-com.0004.public.ves.io.schema.api_group.ves-swagger.json  docs-cloud-f5-com.0006.public.ves.io.schema.api_sec.api_testing.ves-swagger.json  docs-cloud-f5-com.0007.public.ves.io.schema.api_credential.ves-swagger.json  docs-cloud-f5-com.0008.public.ves.io.schema.pbac.addon_service.ves-swagger.json  docs-cloud-f5-com.0009.public.ves.io.schema.pbac.addon_subscription.ves-swagger.json  docs-cloud-f5-com.0012.public.ves.io.schema.alert_policy.ves-swagger.json  docs-cloud-f5-com.0013.public.ves.io.schema.alert_receiver.ves-swagger.json  docs-cloud-f5-com.0014.public.ves.io.schema.alert.ves-swagger.json  docs-cloud-f5-com.0017.public.ves.io.schema.app_setting.ves-swagger.json  docs-cloud-f5-com.0018.public.ves.io.schema.app_type.ves-swagger.json  docs-cloud-f5-com.0020.public.ves.io.schema.app_security.ves-swagger.json  docs-cloud-f5-com.0022.public.ves.io.schema.shape.device_id.ves-swagger.json  docs-cloud-f5-com.0023.public.ves.io.schema.authentication.ves-swagger.json  docs-cloud-f5-com.0029.public.ves.io.schema.bgp_routing_policy.ves-swagger.json  docs-cloud-f5-com.0031.public.ves.io.schema.bigip_irule.ves-swagger.json  docs-cloud-f5-com.0033.public.ves.io.schema.shape.brmalerts.alert_gen_policy.ves-swagger.json  docs-cloud-f5-com.0034.public.ves.io.schema.shape.brmalerts.alert_template.ves-swagger.json  docs-cloud-f5-com.0035.public.ves.io.schema.views.bot_defense_app_infrastructure.ves-swagger.json  docs-cloud-f5-com.0038.public.ves.io.schema.shape.bot_defense.bot_endpoint_policy.ves-swagger.json  docs-cloud-f5-com.0039.public.ves.io.schema.shape.bot_defense.bot_infrastructure.ves-swagger.json  docs-cloud-f5-com.0040.public.ves.io.schema.shape.bot_defense.bot_allowlist_policy.ves-swagger.json  docs-cloud-f5-com.0042.public.ves.io.schema.views.cdn_loadbalancer.ves-swagger.json  docs-cloud-f5-com.0043.public.ves.io.schema.cdn_cache_rule.ves-swagger.json  docs-cloud-f5-com.0045.public.ves.io.schema.operate.crl.ves-swagger.json  docs-cloud-f5-com.0046.public.ves.io.schema.pbac.catalog.ves-swagger.json  docs-cloud-f5-com.0049.public.ves.io.schema.certificate_chain.ves-swagger.json  docs-cloud-f5-com.0051.public.ves.io.schema.tenant_management.child_tenant.ves-swagger.json  docs-cloud-f5-com.0054.public.ves.io.schema.shape.client_side_defense.allowed_domain.ves-swagger.json  (+133 more)
specs/merged/: index.json  (+6 more)
tests/: __init__.py  test_alias_validator.py  test_branding_normalizer.py  test_cli_metadata_enricher.py  test_critical_resources.py  test_curl_validator.py  test_deprecated_tier_enricher.py  test_description_enricher.py  test_description_validation.py  test_domain_categorizer.py  test_domain_descriptions.py  test_domain_metadata.py  test_external_docs_enricher.py  test_field_description_enricher.py  test_field_metadata_enricher.py  test_minimum_configuration_enricher.py  test_namespace_scope_enricher.py  test_operation_metadata_enricher.py  test_operation_metadata_enricher_dual_format.py  test_readonly_enricher.py  test_resource_metadata.py  test_validation_enricher.py
(+181 files in other folders)
